Bug 1068461 - Locate the text frames from viewport frame to select word, r=roc